# modern-signal-slot

./: CMakeLists.txt  README.md  examples.cpp
readme_i18n/: README_zh.md
signal-slot/: signal_slot_api.hpp
signal-slot/core/: signal.hpp  task_queue.cpp  task_queue.hpp  task_queue_base.cpp  task_queue_base.hpp  task_queue_manager.cpp  task_queue_stdlib.cpp  task_queue_stdlib.hpp
test/: test_signal_slot.cpp
